# gerberdiff

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md  GEOMETRY_DIFF_NOT_IMPLEMENTED.md  api.md  architecture.md  cli.md  geometry-diff.md  index.md  schema.md
docs/javascripts/: mathjax.js
docs/reference/: geometry.md  package.md
gerberdelta/: __init__.py  cli.py  types.py
gerberdelta/diff/: diff_engine.py  layer_matcher.py
gerberdelta/export/: png_export.py
gerberdelta/parse/: excellon_parser.py  gerber_parser.py  gerber_state.py  tokenizer.py
gerberdelta/render/: compiled_render.py  draw_ops.py  macro_renderer.py  renderer.py  viewport.py
gerberdiff/: __init__.py  cli.py  types.py
gerberdiff/diff/: __init__.py  diff_engine.py
gerberdiff/export/: __init__.py  json_report.py  svg_export.py
gerberdiff/geometry/: __init__.py  attribute.py  driver.py  expand.py  geom_diff.py  layer_geometry.py  macro_geom.py  primitives.py  types.py
gerberdiff/parse/: __init__.py  arc_math.py  excellon_parser.py  gerber_state.py
gerberdiff/render/: __init__.py  renderer.py
tests/: cairo_support.py  conftest.py  test_arc_math.py  test_block_aperture.py  test_cli_diff.py  test_cli_geomdiff.py  test_cli_parse.py  test_cli_render.py  test_diff_engine.py  test_draw_ops.py  test_excellon_parser.py  test_geometry_attribute.py  test_geometry_booldiff.py  test_geometry_edge_cases.py  test_geometry_expand.py  test_geometry_layer.py  test_geometry_macro.py  test_geometry_oracle.py  test_geometry_primitives.py  test_geometry_report.py  test_gerber_parser.py  test_gerber_state.py  test_json_report.py  test_layer_matcher.py  test_macro_renderer.py  test_renderer.py  test_scaffold.py  test_tokenizer.py  test_types.py  test_viewport.py
