[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gerberdelta"
version = "0.21.0"
description = "Visual raster diff tool for Gerber/Excellon PCB design files"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Cameron Brooks", email = "cameronbrooks11@gmail.com" }]
keywords = ["gerber", "excellon", "pcb", "diff", "eda", "kicad", "grbl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8",
    "numpy>=1.24",
    "cairocffi>=1.6",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/CameronBrooks11/gerberdelta"
Repository = "https://github.com/CameronBrooks11/gerberdelta"
Changelog = "https://github.com/CameronBrooks11/gerberdelta/blob/main/CHANGELOG.md"
Issues = "https://github.com/CameronBrooks11/gerberdelta/issues"

[project.optional-dependencies]
# Installed by end users who want prettier terminal output
rich = ["rich>=13"]

[dependency-groups]
# Dev tools -- NOT distributed with the package; managed by uv only
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "scipy-stubs>=1.17.1.4",
]

[project.scripts]
gerberdelta = "gerberdelta.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["gerberdelta"]

# -- pytest --------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]

# -- ruff ---------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long -- enforced by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["gerberdelta"]

# -- mypy ---------------------------------------------------------------------
[tool.mypy]
python_version          = "3.11"
strict                  = true
warn_return_any         = true
warn_unused_configs     = true
warn_unused_ignores     = true
extra_checks            = true

[[tool.mypy.overrides]]
# cairocffi ships no stub package or py.typed marker
module = ["cairocffi.*"]
ignore_missing_imports = true

# -- coverage -----------------------------------------------------------------
[tool.coverage.run]
source = ["gerberdelta"]
omit   = ["gerberdelta/cli.py"]   # CLI tested via integration; exclude from line-coverage gate

[tool.coverage.report]
fail_under    = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
