[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gerberdiff"
version = "0.29.1"
description = "Diff tool for Gerber/Excellon PCB files: visual raster overlays and attributed vector-geometry change analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Cameron Brooks", email = "cameronbrooks11@gmail.com" }]
keywords = ["gerber", "excellon", "pcb", "diff", "eda", "kicad", "grbl", "geometry", "shapely"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8",
    "numpy>=1.24",
    "cairocffi>=1.6",
    "scipy>=1.10",
    "shapely>=2.0",
]

[project.urls]
Homepage = "https://github.com/CameronBrooks11/gerberdiff"
Repository = "https://github.com/CameronBrooks11/gerberdiff"
Changelog = "https://github.com/CameronBrooks11/gerberdiff/blob/main/CHANGELOG.md"
Issues = "https://github.com/CameronBrooks11/gerberdiff/issues"

[project.optional-dependencies]
# Installed by end users who want prettier terminal output
rich = ["rich>=13"]

[dependency-groups]
# Dev tools -- NOT distributed with the package; managed by uv only
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "scipy-stubs>=1.17.1.4",
    "types-shapely>=2.1",
]
# Documentation site; built and deployed by .github/workflows/docs.yml.
# Material 9.x is pinned to MkDocs 1.x (MkDocs 2.0 is an incompatible
# rewrite); the maintainers' successor (Zensical) is the migration path
# once its plugin support matures.
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.26",
]

[project.scripts]
gerberdiff = "gerberdiff.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["gerberdiff"]

# -- pytest --------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]

# -- ruff ---------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long -- enforced by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["gerberdiff"]

# -- mypy ---------------------------------------------------------------------
[tool.mypy]
python_version          = "3.11"
strict                  = true
warn_return_any         = true
warn_unused_configs     = true
warn_unused_ignores     = true
extra_checks            = true

[[tool.mypy.overrides]]
# cairocffi ships no stub package or py.typed marker
module = ["cairocffi.*"]
ignore_missing_imports = true

# -- coverage -----------------------------------------------------------------
[tool.coverage.run]
source = ["gerberdiff"]
omit   = ["gerberdiff/cli.py"]   # CLI tested via integration; exclude from line-coverage gate

[tool.coverage.report]
# Keep in sync with the CI gate (--cov-fail-under in .github/workflows/ci.yml).
fail_under    = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
